-
Bug
-
Resolution: Done
-
P1: Critical
-
6.1.2, 6.2.0
-
-
9b8fb32f3970c56fe57aa2cf067928327f1162c7 (qt/tqtc-qtbase/6.2) 68600869cd (qt/tqtc-qtbase/6.3)
If Qt6 is build statically, QPrinter NativeFormat is never picked up. if Qt is build dynamically with same configure it works. It looks like plugin is not build.
- relates to
-
QTBUG-83783 Dead keys don't work when linking against a static Qt build
-
- Closed
-
| For Gerrit Dashboard: QTBUG-97490 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 381591,3 | Link printer plugins into user projects when using a static Qt | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 382268,2 | Link printer plugins into user projects when using a static Qt | 6.2 | qt/qtbase | Status: MERGED | +2 | 0 |