src/printsupport/kernel/qplatformprintplugin.cpp
@@ -48,6 +48,12 @@
 
 QT_BEGIN_NAMESPACE
 
+#if defined(Q_OS_MACOS)
+Q_IMPORT_PLUGIN(QCocoaPrinterSupportPlugin)
+#elif defined(Q_OS_WIN)
+Q_IMPORT_PLUGIN(QWindowsPrinterSupportPlugin)
+#endif
+
 Q_GLOBAL_STATIC_WITH_ARGS(QFactoryLoader, loader,
     (QPlatformPrinterSupportFactoryInterface_iid, QLatin1String("/printsupport"), Qt::CaseInsensitive))
 
